# todo_list

./: Makefile  db.sqlite3  pyproject.toml
my_app/: settings.py  urls.py
todo/: models.py  views.py
todo/static/css/: todo.css
todo/templates/todo/: base.html  todo_list.html
todolist/: settings.py
