[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Evgeny Chayka"]
readme = "README.md"
packages = [{include = 'my_app'}]

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
